openshift/dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: http-base
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: http-base
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: http-base
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo/http-base@sha256:e2427c7e183d0d42c4da416a9c9b20c1b0a90c9db47c9dd907e661f3995c7a25
        imagePullPolicy: Always
        name: http-base
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - http-base
      from:
        kind: ImageStreamTag
        name: http-base:latest
        namespace: demo
      lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/demo/http-base@sha256:e2427c7e183d0d42c4da416a9c9b20c1b0a90c9db47c9dd907e661f3995c7a25
    type: ImageChange
